<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="70dp">

            <ImageView
                android:id="@+id/image_logo"
                android:layout_width="235dp"
                android:layout_height="180dp"
                android:layout_centerInParent="true"
                android:contentDescription="Application Logo"
                app:srcCompat="@mipmap/ic_launcher_round"
                tools:srcCompat="@tools:sample/avatars" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <EditText
                    android:id="@+id/prompt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="30dp"
                    android:contentDescription="@string/prompt_name"
                    android:hint="@string/prompt_name"
                    android:inputType="textPersonName"
                    android:paddingBottom="15dp" />

                <EditText
                    android:id="@+id/prompt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:contentDescription="@string/desc_prompt_email"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:paddingBottom="15dp" />

                <EditText
                    android:id="@+id/prompt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:contentDescription="@string/desc_prompt_password"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:paddingBottom="15dp" />

                <Button
                    android:id="@+id/button_signup"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="15dp"
                    android:contentDescription="@string/action_register"
                    android:text="@string/action_register" />

                <TextView
                    android:id="@+id/open_signin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/action_open_signin"
                    android:padding="15dp"
                    android:text="@string/action_open_signin"
                    android:textAlignment="center" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:visibility="gone"/>
        </RelativeLayout>
    </LinearLayout>