<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".MainActivity">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:paddingTop="70dp">

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="235dp"
        android:layout_height="180dp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/desc_image_logo"
        app:srcCompat="@mipmap/ic_launcher_round"
        tools:srcCompat="@tools:sample/avatars" />
</RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <EditText
                android:id="@+id/prompt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="30dp"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:paddingBottom="15dp"
                android:autofillHints="" />

            <EditText
                android:id="@+id/prompt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:paddingBottom="15dp"
                android:autofillHints="" />

    <Button
        android:id="@+id/button_signin"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_gravity="center"
        android:contentDescription="@string/title_activity_login"
        android:text="@string/title_activity_login" />

    <TextView
        android:id="@+id/open_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:contentDescription="@string/action_open_signup"
        android:textAlignment="center"
        android:text="@string/action_open_signup"
        android:layout_marginBottom="30dp"/>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone"/>
    </RelativeLayout>
</LinearLayout>